# esp-rs-ble-miscomp

./: Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: devcontainer.json
debug_stuff/: esp-idf_patch.patch  log_fail.txt  log_ok.txt
docs/: README.md
scripts/: flash.sh
src/: main.rs
